Synced up link colors

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,13 +19,13 @@
               Search
             </a>
           </li>
-          <li>
+          <li id="about">
             <a href="/about">About</a>
           </li>
-          <li>
+          <li id="join">
             <a href="/join">Join</a>
           </li>
-          <li>
+          <li id="contact">
             <a href="/contact">Contact</a>
           </li>
         </ul>
