--- a/_sass/site.scss
+++ b/_sass/site.scss
@@ -1,3 +1,5 @@
+$link-color: #982022;
+
 body {
     font-family: 'Open Sans', sans-serif;
     font-size: 16px;
@@ -6,22 +8,26 @@ body {
     -moz-osx-font-smoothing: grayscale;
 }
 
+a {
+  color: $link-color;
+}
+
 button {
     background-color: #fff;
-    color: #0067c5;
-    border: 2px solid #0067c5;
+    color: $link-color;
+    border: 2px solid $link-color;
     padding: 10px;
     font-weight:600;
 }
 
 button:hover {
-    background-color: #0067c5;
-    border: 2px solid #0067c5;
+    background-color: $link-color;
+    border: 2px solid $link-color;
     color: #ffffff;
 }
 
 .text-standout {
-    color: #0067c5;
+    color: $link-color;
     font-weight:600;
 }
 
@@ -59,6 +65,12 @@ button:hover {
 
       .navbar-nav {
         &> li {
+
+          &.active {
+            &> a {
+              color: #aaa;
+            }
+          }
           &> a {
             color: #fff;
             padding-top:25px;
@@ -82,8 +94,8 @@ button:hover {
         text-align:center;
         padding: 2px 14px;
         margin: 0px 5px;
-        border: 1px solid #0067c5;
-        color: #0067c5;
+        border: 1px solid $link-color;
+        color: $link-color;
     }
     .box-byline {
         text-align: center;
@@ -188,7 +200,7 @@ h2, .h2 {
     margin-bottom: 30px;
     .cta a {
         font-weight: 600;
-        color: #0067c5;
+        color: $link-color;
     }
 }
 
@@ -210,7 +222,7 @@ h2, .h2 {
 .gazettes_nav {
 
     .gazettes_nav_btn {
-        background-color: #0067c5;
+        background-color: $link-color;
         border: none;
         color: #ffffff;
         padding: 10px;
@@ -300,19 +312,19 @@ h2, .h2 {
 .join-title {
     background-color: #fff;
     padding: 15px;
-    color: #0067c5;
+    color: $link-color;
     font-weight: 700;
     font-size: 30px;
     width: 60%;
     margin-left: auto;
     margin-right: auto;
-    border: 2px solid #0067c5;
+    border: 2px solid $link-color;
 }
 
 .join-title:hover {
-    background-color:#0067c5;
+    background-color:$link-color;
     color: #fff;
-    border: 2px solid #0067c5;
+    border: 2px solid $link-color;
 }
 .banner a:hover {
     text-decoration:none;
