Fixed contact link

--- a/_sass/site.scss
+++ b/_sass/site.scss
@@ -82,6 +82,9 @@ button:hover {
         }
       }
     }
+    .subheader {
+      background-color: #ddd;
+    }
     .byline {
         margin-top:8px;
     }
