--- a/_includes/header.html
+++ b/_includes/header.html
@@ -26,14 +26,14 @@
             <a href="/join">Join</a>
           </li>
           <li id="contact">
-            <a href="/contact">Contact</a>
+            <a href="/about#contact-us">Contact</a>
           </li>
         </ul>
       </div>
     </div>
   </nav>
 
-  <div class="container">
+  <div class="container subheader">
       <div class="row">
 
         <div class="col-md-6">
