Collapsing navbar on mobile

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,6 +26,7 @@
     </script>
 
     <script src="/js/jquery-1.11.3.min.js"></script>
+    <script src="/js/bootstrap-3.3.7.min.js"></script>
     <script src="/js/main.js"></script>
 
   </body>
