--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
   <nav class="navbar navbar-default navbar-static-top" role="navigation">
     <div class="container">
       <div class="navbar-header">
-        <button class="navbar-toggle" type="button" ng-click="navbarCollapsed = !navbarCollapsed">
+        <button class="navbar-toggle collapsed" type="button" data-toggle="collapse" data-target="#navbar-collapse" aria-expanded="false">
           <span class="sr-only">Toggle navigation</span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
@@ -12,7 +12,7 @@
         <a class="navbar-brand" href="/">Open Gazettes South Africa</a>
       </div>
 
-      <div uib-collapse="navbarCollapsed" class="navbar-collapse bs-js-navbar-collapse">
+      <div id="navbar-collapse" class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
           <li>
             <a href="http://search.opengazettes.org.za/search">
