Subheader, mobile fixes

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -33,21 +33,23 @@
     </div>
   </nav>
 
-  <div class="container subheader">
+  <div class="subheader">
+    <div class="container">
       <div class="row">
 
-        <div class="col-md-6">
+        <div class="col-md-7">
           <div class="byline">
-            <p>The biggest freely available collection of gazettes in the country</p>
+            The biggest freely available collection of gazettes in the country
           </div>
         </div>
 
-        <div class="col-md-6">
+        <div class="col-md-5">
           <div class="counter">
-              <p><i class="fa fa-history" aria-hidden="true"></i> {{ site.data.gazettes.stats.count }} gazettes from  {{ site.data.gazettes.stats.earliest_year }} to {{ site.data.gazettes.stats.latest_year }} </p>
+            <i class="fa fa-history" aria-hidden="true"></i> {{ site.data.gazettes.stats.count }} gazettes from  {{ site.data.gazettes.stats.earliest_year }} to {{ site.data.gazettes.stats.latest_year }}
           </div>
         </div>
 
       </div>
+    </div>
   </div>
 </header>
