Adjust header border

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -15,15 +15,13 @@
       <div id="navbar-collapse" class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
           <li>
-            <a href="http://search.opengazettes.org.za/search">
-              Search
-            </a>
+            <a href="https://search.opengazettes.org.za/">Search</a>
+          </li>
+          <li id="join">
+            <a href="/join">Liberate Gazettes</a>
           </li>
           <li id="about">
             <a href="/about">About</a>
-          </li>
-          <li id="join">
-            <a href="/join">Join</a>
           </li>
           <li id="contact">
             <a href="/about#contact-us">Contact</a>
