--- a/_sass/site.scss
+++ b/_sass/site.scss
@@ -186,19 +186,15 @@ h2, .h2 {
     color: #333;
 }
 
-.banner p {
-        font-size: 30px;
-        font-weight: 600;
-    }
-
 .introduction {
-
     margin-top: 30px;
     margin-bottom: 30px;
-    .cta a {
-        font-weight: 600;
-        color: $link-color;
-    }
+}
+
+.banner {
+    font-size: 26px;
+    font-weight: 600;
+    text-align: center;
 }
 
 .page-tag {
@@ -298,23 +294,19 @@ h2, .h2 {
     text-decoration: none;
 }
 
-.join-title {
-    background-color: #fff;
+.big-cta {
+    display: block;
     padding: 15px;
-    color: $link-color;
-    font-weight: 700;
-    font-size: 30px;
-    width: 70%;
-    margin-left: auto;
-    margin-right: auto;
+    background-color: $link-color;
+    color: white;
     border: 2px solid $link-color;
+
+    &:hover {
+      background-color: white;
+      color: $link-color;
+    }
 }
 
-.join-title:hover {
-    background-color:$link-color;
-    color: #fff;
-    border: 2px solid $link-color;
-}
 .banner a:hover {
     text-decoration:none;
 }
@@ -326,10 +318,6 @@ h2, .h2 {
 
 .banner a .fa {
     font-size: 26px;
-}
-
-fa-chevron-circle-right {
-    font-size: 26px!important;
 }
 
 @media screen and (max-width: 768px) {
