Search, aleph collection details

--- a/_layouts/year.html
+++ b/_layouts/year.html
@@ -10,6 +10,8 @@ layout: default
     {% include year_nav.html %}
   </header>
 
+  {% include search.html %}
+
   <div class="post-content">
     {% for gazette in site.data.gazettes[page.jurisdiction].gazettes[page.year] %}
       {% assign currentdate = gazette.publication_date | date: "%B %Y" %}
