--- a/_sass/site.scss
+++ b/_sass/site.scss
@@ -12,25 +12,6 @@ a {
   color: $link-color;
 }
 
-button {
-    background-color: #fff;
-    color: $link-color;
-    border: 2px solid $link-color;
-    padding: 10px;
-    font-weight:600;
-}
-
-button:hover {
-    background-color: $link-color;
-    border: 2px solid $link-color;
-    color: #ffffff;
-}
-
-.text-standout {
-    color: $link-color;
-    font-weight:600;
-}
-
 .site-header {
   .navbar {
     margin-bottom: 0px;
@@ -371,4 +352,8 @@ article {
         margin-bottom: 20px;
         margin-top: 20px;
     }
+}
+
+form.search-form {
+  margin-bottom: 20px;
 }
