--- a/_layouts/jurisdiction.html
+++ b/_layouts/jurisdiction.html
@@ -8,6 +8,8 @@ layout: default
     <h1 class="post-title">{{ page.title }}</h1>
   </header>
 
+  {% include search.html %}
+
   <div class="post-content">
     <ul>
     {% assign years = site.data.gazettes[page.jurisdiction].years | reverse %}
