--- a/_layouts/jurisdiction.html
+++ b/_layouts/jurisdiction.html
@@ -8,7 +8,11 @@ layout: default
     <h1 class="post-title">{{ page.title }}</h1>
   </header>
 
-  {% include search.html %}
+  <div class="row">
+    <div class="col-md-6">
+      {% include search.html %}
+    </div>
+  </div>
 
   <div class="post-content">
     <ul>
