--- a/_sass/site.scss
+++ b/_sass/site.scss
@@ -186,6 +186,9 @@ h2, .h2 {
 }
 
 .gazettes_nav {
+    .search-form {
+        margin-bottom: 40px;
+    }
 
     .gazettes_nav_btn {
         background-color: $link-color;
