--- a/css/main.scss
+++ b/css/main.scss
@@ -6,8 +6,7 @@
 $spacing-unit:     30px;
 
 $text-color:       #111;
-$body-bg: #fdfdfd;
-$brand-color:      #2a7ae2;
+$brand-primary:    #982022;
 
 $grey-color:       #828282;
 $grey-color-light: lighten($grey-color, 40%);
