Search box throughout site (#27)
* Search, aleph collection details

* Search on homepage

* Simplify brand colour, no bg color

--- a/_layouts/year.html
+++ b/_layouts/year.html
@@ -10,6 +10,12 @@ layout: default
     {% include year_nav.html %}
   </header>
 
+  <div class="row">
+    <div class="col-md-6">
+      {% include search.html %}
+    </div>
+  </div>
+
   <div class="post-content">
     {% for gazette in site.data.gazettes[page.jurisdiction].gazettes[page.year] %}
       {% assign currentdate = gazette.publication_date | date: "%B %Y" %}
