--- a/_layouts/jurisdiction.html
+++ b/_layouts/jurisdiction.html
@@ -8,6 +8,12 @@ layout: default
     <h1 class="post-title">{{ page.title }}</h1>
   </header>
 
+  <div class="row">
+    <div class="col-md-6">
+      {% include search.html %}
+    </div>
+  </div>
+
   <div class="post-content">
     <ul>
     {% assign years = site.data.gazettes[page.jurisdiction].years | reverse %}
