update icons layout on about page

--- a/_sass/site.scss
+++ b/_sass/site.scss
@@ -269,6 +269,27 @@ h2, .h2 {
   font-size: 14px;
 }
 
+.icons-section {
+  text-align: center;
+}
+
+.icons-section p {
+  font-size: 12px;
+  font-weight: 600;
+}
+
+.icons-cta {
+  text-align: center;
+  width: 64px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.due {
+  color: #e82b0c;
+  font-size: 12px;
+}
+
 .img-center {
     text-align:center;
 }
