--- a/_sass/site.scss
+++ b/_sass/site.scss
@@ -299,10 +299,15 @@ h2, .h2 {
 
 .big-cta {
     display: block;
-    padding: 15px;
+    padding: 13px;
     background-color: $link-color;
     color: white;
     border: 2px solid $link-color;
+
+    width: 80%;
+    font-size: 18px;
+    margin-left: auto;
+    margin-right: auto;
 
     &:hover {
       background-color: white;
