--- a/_sass/site.scss
+++ b/_sass/site.scss
@@ -267,6 +267,7 @@ h2, .h2 {
 
 .readmore {
   font-size: 14px;
+  font-weight: 300;
 }
 
 .icons-section {
@@ -281,12 +282,10 @@ h2, .h2 {
 .icons-cta {
   text-align: center;
   width: 64px;
-  margin-top: 10px;
-  margin-bottom: 10px;
 }
 
 .due {
-  color: #e82b0c;
+  color: #982022;
   font-size: 12px;
 }
 
