update styles, reposition blog post links, remove opengazette scraping, remove search bar from ZA-FS and add FS notice, revert style for thumbnails

--- a/_layouts/jurisdiction.html
+++ b/_layouts/jurisdiction.html
@@ -6,11 +6,14 @@ layout: default
 
   <header class="post-header">
     <h1 class="post-title">{{ page.title }}</h1>
+    <p>{{ page.notice }} </p>
   </header>
 
   <div class="row">
     <div class="col-md-6">
-      {% include search.html %}
+    {% if page.jurisdiction != "ZA-FS" %}
+        {% include search.html %}
+    {% endif %}
     </div>
   </div>
 
