--- a/_sass/site.scss
+++ b/_sass/site.scss
@@ -267,6 +267,11 @@ h2, .h2 {
 
 .readmore {
   font-size: 16px;
+  font-weight:300;
+}
+
+.readmore:hover {
+  text-decoration: underline;
 }
 
 .icons-section {
