--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -31,16 +31,25 @@
         </div>
 
         <div class="row logos">
-          <div class="col-sm-3 text-center">
+          <div class="col-xs-6 col-sm-4 col-md-2 text-center col-logo">
             <a href="http://code4sa.org" target="_blank"><img src="{{ "/img/logo.png" | prepend: site.baseurl }}" class="c4sa logo img-responsive" alt="Code for SA"></a>
+          </div>
+          <div class="col-xs-6 col-sm-4 col-md-2 text-center col-logo">
             <a href="https://indigotrust.org.uk/" target="_blank"><img src="{{ "/img/indigo_trust.png" | prepend: site.baseurl }}" class="indigo-trust logo img-responsive" alt="Indigo Trust"></a>
+          </div>
+          <div class="col-xs-6 col-sm-4 col-md-2 text-center col-logo">
             <a href="http://www.codebridge.co.za/" target="_blank"><img src="{{ "/img/codebridge-logo.png" | prepend: site.baseurl }}" class="codebridge logo img-responsive" alt="Codebridge"></a>
           </div>
-          <div class="col-sm-3 text-center">
+          <div class="col-xs-6 col-sm-4 col-md-2 text-center col-logo">
             <a href="http://www.saflii.org/" target="_blank"><img src="{{ "/img/saflii_logo.png" | prepend: site.baseurl }}" class="saflii logo img-responsive" alt="SAFLII"></a>
+          </div>
+          <div class="col-xs-6 col-sm-4 col-md-2 text-center col-logo">
             <a href="https://codeforafrica.org/" target="_blank"><img src="{{ "/img/codeforafrica_logo.png" | prepend: site.baseurl }}" class="code4africa logo img-responsive" alt="Code for Africa"></a>
           </div>
-          <div class="col-sm-6">
+          <div class="col-xs-6 col-sm-4 col-md-2 text-center col-logo">
+            <a href="https://investigativecenters.org/" target="_blank"><img src="{{ "/img/ancir-logo.png" | prepend: site.baseurl }}" class="code4africa logo img-responsive" alt="Code for Africa"></a>
+          </div>
+          <div class="col-xs-12">
             <a class="twitter-timeline"  href="https://twitter.com/hashtag/GazetteLiberation" data-widget-id="771327133071310848">#GazetteLiberation Tweets</a>
             <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
           </div>
