codebridge wrong link

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -38,7 +38,7 @@
             <a href="https://indigotrust.org.uk/" target="_blank"><img src="{{ "/img/indigo_trust.png" | prepend: site.baseurl }}" class="indigo-trust logo img-responsive" alt="Indigo Trust"></a>
           </div>
           <div class="col-xs-6 col-sm-4 col-md-2 text-center col-logo">
-            <a href="http://www.codebridge.co.za/" target="_blank"><img src="{{ "/img/codebridge-logo.png" | prepend: site.baseurl }}" class="codebridge logo img-responsive" alt="Codebridge"></a>
+            <a href="http://www.codebridge.org.za/" target="_blank"><img src="{{ "/img/codebridge-logo.png" | prepend: site.baseurl }}" class="codebridge logo img-responsive" alt="Codebridge"></a>
           </div>
           <div class="col-xs-6 col-sm-4 col-md-2 text-center col-logo">
             <a href="http://www.saflii.org/" target="_blank"><img src="{{ "/img/saflii_logo.png" | prepend: site.baseurl }}" class="saflii logo img-responsive" alt="SAFLII"></a>
