Add appropriate titles to links

--- a/_layouts/jurisdiction.html
+++ b/_layouts/jurisdiction.html
@@ -34,7 +34,7 @@ layout: default
       <ul>
         {% for resources in page.resources %}
           <li>
-            <a href="{{ resources.bullet }}" target="_blank">
+            <a href="{{ resources.url }}" target="_blank">
               {{ resources.bullet }}
             </a>
           </li>
