amend section title

--- a/_layouts/jurisdiction.html
+++ b/_layouts/jurisdiction.html
@@ -30,7 +30,7 @@ layout: default
 
     {% if page.resources != "none" %}
     <section class="resources">
-      <p>Browse local resources</p>
+      <p>Browse gazettes resources</p>
       <ul>
         {% for resources in page.resources %}
           <li>
