--- a/_sass/site.scss
+++ b/_sass/site.scss
@@ -116,10 +116,9 @@ header {
 }
 
 .site-footer {
-    background-color: #f7f7f7;
     margin-top: 30px;
-    padding-top: 30px;
-    padding-bottom: 30px;
+    /*padding-top: 30px;
+    padding-bottom: 30px;*/
 
     h2 {
         margin-top: 0px;
@@ -133,6 +132,21 @@ header {
         margin: auto;
         margin-bottom: 20px;
     }
+
+    .footer-info {
+      background-color: #f7f7f7;
+      padding: 30px 0px;
+    }
+
+    .footer-credits {
+        background-color: #f1f1f1;
+        padding: 30px 0px;
+    }
+
+
+
+
+
 
     @media (max-width: 420px) {
       .col-logo {
