reduce twitter icon size

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -21,7 +21,7 @@
           <div class="col-sm-6">
             <ul class="list-unstyled">
               <li><a href="https://github.com/Code4SA/opengazettes">Open Gazettes on GitHub</a></li>
-              <li>Follow the conversation on Twitter <a href="https://twitter.com/hashtag/GazetteLiberation"><img src="{{ "/img/icons/twitter-hover.png" | prepend: site.baseurl }}" alt="Follow the conversation around OpenGazettes on Twitter" /></a></li>
+              <li>Follow the conversation on Twitter <a href="https://twitter.com/hashtag/GazetteLiberation"><img width="24px" src="{{ "/img/icons/twitter-hover.png" | prepend: site.baseurl }}" alt="Follow the conversation around OpenGazettes on Twitter" /></a></li>
             </ul>
           </div>
         </div>
