--- a/_sass/site.scss
+++ b/_sass/site.scss
@@ -64,9 +64,9 @@ body {
   .subheader {
     padding-top: 10px;
     padding-bottom: 10px;
-    background-color: #ddd;
+    background-color: #f7f7f7;
     font-size: 20px;
-    font-weight: 400;
+    font-weight: 300;
     color: #333;
 
     .counter {
@@ -142,11 +142,6 @@ header {
         background-color: #f1f1f1;
         padding: 30px 0px;
     }
-
-
-
-
-
 
     @media (max-width: 420px) {
       .col-logo {
