--- a/_sass/site.scss
+++ b/_sass/site.scss
@@ -47,7 +47,8 @@ body {
 
         &.active {
           &> a {
-            color: #aaa;
+            background-color: #333;
+            color: #c50003;
           }
         }
         &> a {
