--- a/_sass/site.scss
+++ b/_sass/site.scss
@@ -49,6 +49,7 @@ body {
           &> a {
             background-color: #333;
             color: #c50003;
+            font-weight: 700;
           }
         }
         &> a {
