add basic styled box to other resources

--- a/_layouts/year.html
+++ b/_layouts/year.html
@@ -38,6 +38,12 @@ layout: default
     {% include year_nav.html %}
   </footer>
 
-  {% include resources.html %}
+  <div class="row">
+    <div class="col-md-6">
+      <div class="other-resources">
+        {% include resources.html %}
+      </div>
+    </div>
+  </div>
 
 </article>
