--- a/_sass/site.scss
+++ b/_sass/site.scss
@@ -403,3 +403,11 @@ article {
 form.search-form {
   margin-bottom: 20px;
 }
+
+// External Gazettes Resources Box
+
+  .other-resources {
+    background-color: #f7f7f7;
+    padding: 20px;
+    min-height: 75px;
+  }
