fix style - change class from layout to includes

--- a/_sass/site.scss
+++ b/_sass/site.scss
@@ -404,7 +404,7 @@ form.search-form {
   margin-bottom: 20px;
 }
 
-.other-resources {
+.resources {
   background-color: #f7f7f7;
   padding: 20px;
 }
