--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -14,7 +14,7 @@
             <ul class="list-unstyled">
               <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
               <li><a href="/about.html">About Open Gazettes</a></li>
-              <li><a href="http://code4sa-gazettes.s3.amazonaws.com/archive/recently-added.atom" type="application/rss+xml" rel="alternate">Atom Feed</a></li>
+              <li><a href="http://archive.opengazettes.org.za/recently-added.atom" type="application/rss+xml" rel="alternate">Atom Feed</a></li>
             </ul>
           </div>
 
@@ -25,7 +25,7 @@
             </ul>
           </div>
         </div>
-    
+
     </div>
     </section>
 
