--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
   <link rel="stylesheet" href="{{ "/css/font-awesome.min.css" | prepend: site.baseurl }}">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
-  <link rel="alternate" type="application/atom+xml" title="Recently added gazettes" href="http://code4sa-gazettes.s3.amazonaws.com/archive/recently-added.atom">
+  <link rel="alternate" type="application/atom+xml" title="Recently added gazettes" href="http://archive.opengazettes.org.za/recently-added.atom">
 
   {% seo %}
 </head>
