--- a/_sass/site.scss
+++ b/_sass/site.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Lato');
+
 body {
     font-family: 'Open Sans', sans-serif;
     font-size: 16px;
@@ -207,7 +209,7 @@ h2, .h2 {
         color: #ffffff;
         padding: 10px;
         font-weight: 600;
-        margin-bottom: 20px;
+        margin-bottom: 5px;
         width: 100%;
         height: 200px;
         border-radius: 5px;
@@ -222,7 +224,7 @@ h2, .h2 {
     .btn_p {
         color: #ffffff;
         font-size: 24px;
-        font-family: 'Lato', sans-seif;
+        font-family: 'Lato', sans-serif;
         line-height: 42px;
     }
 
@@ -407,4 +409,40 @@ form.search-form {
 .resources {
   background-color: #f7f7f7;
   padding: 20px;
+}
+
+.progress-vertical {
+    width: 20px;
+    height: 100px !important;
+    position: relative;
+}
+.progress-vertical .bar {
+    width: 100% !important;
+    position: absolute;
+    bottom: 0;
+    border-bottom-left-radius: inherit;
+    border-bottom-right-radius: inherit;
+}
+
+.axis {
+  font: 10px sans-serif;
+}
+
+.axis path,
+.axis line {
+  fill: none;
+  stroke: #000;
+  shape-rendering: crispEdges;
+}
+
+#chart {
+  margin-bottom: 15px;
+}
+
+svg rect {
+  fill: #ccc !important;
+  &:hover {
+    fill: #333 !important;
+    cursor: pointer;
+  }
 }
