--- a/_layouts/jurisdiction.html
+++ b/_layouts/jurisdiction.html
@@ -1,22 +1,6 @@
 ---
 layout: default
 ---
-<style>
-  .domain, .tick > line {
-    display: none;
-  }
-
-  .monthly-chart {
-    margin: 10px 0 20px 0;
-    padding-bottom: 20px; 
-  }
-
-  svg .axis text {
-    fill: #999;
-    font-family: 'Open Sans', sans-serif;
-  } 
-</style>
-
 <article class="year">
 
   <header class="post-header">
@@ -36,9 +20,9 @@ layout: default
       <div class="col-md-8">
         {% assign years = site.data.gazettes[page.jurisdiction].years | reverse %}
         {% for thisyear in years %}
-          <div class="row">
+          <div class="row jurisdiction-stats">
             <div class="col-md-4">
-              <h2 style="font-weight: 600;"><a href="{{ thisyear }}">{{ thisyear }}</a>
+              <h2><a href="{{ thisyear }}">{{ thisyear }}</a>
               <small>{{ site.data.gazettes.stats.counts[page.jurisdiction].available.year[thisyear] }} {% if site.data.gazettes.stats.counts[page.jurisdiction].available.year[thisyear] == 1 %}gazette{% else %}gazettes{% endif %}</small></h2>
             </div>
             <div class="col-md-5">
@@ -60,76 +44,6 @@ layout: default
 
 </article>
 
-<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
-<script src="/js/underscore-min.js"></script>
-<script src="/js/d3.v4.min.js"></script>
-
 <script>
   var collection = {{ site.data.gazettes.stats.counts[page.jurisdiction].available | jsonify }};
-
-  $(".monthly-chart").each(function(i) {
-    var thisYear = $(this).attr("year");
-    var data = collection.year_month[thisYear];
-    
-    var months = d3.keys(data).sort();
-
-    var monthlyData = [];
-
-    _.each(months, function(month) {
-      monthlyData.push({
-        month: month,
-        number: data[month]
-      })
-    });
-
-
-    var margin = {top: 0, right: 0, bottom: 20, left: 0},
-        width = $(this).parent().width() - margin.left - margin.right,
-        height = 50 - margin.top - margin.bottom;
-
-    var svg = d3.select(this).append("svg")
-        .attr("width", width + margin.left + margin.right)
-        .attr("height", height + margin.top + margin.bottom)
-
-    var x = d3.scaleBand().rangeRound([0, width]).padding(0.05),
-        y = d3.scaleLinear().rangeRound([height, 0]);
-
-    var g = svg.append("g")
-        .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
-
-    x.domain(monthlyData.map(function(d) { return d.month; }));
-    y.domain([0, d3.max(monthlyData, function(d) { return d.number; })]);
-
-    g.append("g")
-        .attr("class", "axis axis--x")
-        .attr("transform", "translate(0," + height + ")")
-        .call(d3.axisBottom(x)
-          .tickFormat(function(d) {
-            return { 
-              "01": "J",
-              "02": "F",
-              "03": "M",
-              "04": "A",
-              "05": "M",
-              "06": "J",
-              "07": "J",
-              "08": "A",
-              "09": "S",
-              "10": "O",
-              "11": "N",
-              "12": "D",
-              }[d];
-            }));
-
-    g.selectAll(".bar")
-      .data(monthlyData)
-      .enter().append("rect")
-        .attr("class", "bar")
-        .attr("x", function(d) { return x(d.month); })
-        .attr("y", function(d) { return y(d.number); })
-        .attr("width", x.bandwidth())
-        .attr("height", function(d) { return height - y(d.number); })
-        .on("click", function(d) { document.location = thisYear + "#" + d.month })
-  });
-
 </script>
