add chart to year page

--- a/_sass/site.scss
+++ b/_sass/site.scss
@@ -412,7 +412,7 @@ form.search-form {
 }
 
 
-.jurisdiction-stats {
+.jurisdiction-stats, .year-stats {
   svg {
     rect {
       fill: $grey-color-light !important;
