--- a/_layouts/jurisdiction.html
+++ b/_layouts/jurisdiction.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-<article class="year">
+<article class="jurisdiction">
 
   <header class="post-header">
     <h1 class="post-title">{{ page.title }}</h1>
