--- a/_layouts/year.html
+++ b/_layouts/year.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-<article class="jurisdiction">
+<article class="year">
 
   <header class="post-header">
     <h1 class="post-title">{{ page.title }}</h1>
@@ -12,6 +12,15 @@ layout: default
   <div class="row">
     <div class="col-md-6">
       {% include search.html %}
+    </div>
+  </div>
+
+  <div class="row year-stats">
+    <div class="col-md-2">
+      <h3>{{ site.data.gazettes.stats.counts[page.jurisdiction].available.year[page.year] }} {% if site.data.gazettes.stats.counts[page.jurisdiction].available.year[page.year] == 1 %}gazette{% else %}gazettes{% endif %}</h3>
+    </div>
+    <div class="col-md-4">
+      <div year="{{ page.year }}" class="monthly-chart"></div>
     </div>
   </div>
 
@@ -42,3 +51,7 @@ layout: default
   </div>
 
 </article>
+
+<script>
+  var collection = {{ site.data.gazettes.stats.counts[page.jurisdiction].available | jsonify }};
+</script>
